--- a/css/styles.css
+++ b/css/styles.css
@@ -52,11 +52,18 @@ img {
   border-bottom: 1px solid #e7e9fc;
   box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
+  height: 70px;
+  display: flex;
+  max-width: 428px;
+  margin: 0 auto;
+  position: relative;
 }
 .heads {
-  align-items: center;
-  padding: 0 15px;
+  width: 427px;
+  margin: 0;
+  /* padding: 0 15px; */
   display: flex;
+  justify-content: space-between;
 }
 .navigat {
   display: flex;
@@ -82,13 +89,10 @@ img {
   color: var(--color--);
 }
 .head {
-  gap: 40px;
-  display: flex;
+  display: none;
 }
 .list {
-  list-style: none;
-  gap: 40px;
-  display: flex;
+  display: none;
 }
 .list-it:hover,
 .list-it:focus {
@@ -119,8 +123,7 @@ img {
   border-radius: 2px;
 }
 .addss {
-  font-style: normal;
-  margin-left: auto;
+  display: none;
 }
 .address:hover,
 .address:focus {
@@ -135,7 +138,80 @@ img {
   color: var(--text-color);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
+.open-menu-btn {
+  border: none;
+  padding: 0;
+  background-color: inherit;
+}
+/* Mobile open menu */
+.menu-nav-mobile {
+  width: 100%;
+  max-width: 428px;
+  height: 100%;
+  z-index: 15;
+  position: fixed;
+  top: 0;
+  padding: 24px 24px 40px 40px;
+  background-color: var(--backgr-color);
+}
+.close-menu-btn {
+  display: block;
+  margin-left: auto;
+  margin-bottom: 32px;
+}
+.mobile-nav {
+  margin-bottom: 284px;
+}
+.mobile-nav-li {
+  margin-bottom: 40px;
+}
+.mob-li {
+  font-size: 36px;
+  font-family: Roboto;
+  font-weight: 700;
+  line-height: 40px;
+  letter-spacing: 0.72px;
+  text-transform: capitalize;
+  color: var(--color--);
+  text-decoration: none;
+}
+.mob-li:hover,
+.mob-li:focus {
+  color: var(--next-color--);
+}
+.mobile-address {
+  display: block;
+  margin-bottom: 40px;
+}
+.address-li {
+  display: block;
+  font-size: 36px;
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 40px;
+  letter-spacing: 0.72px;
+  text-transform: capitalize;
+  text-decoration: none;
+  color: var(--t-color--);
+  margin-bottom: 40px;
+}
+.address-meil-li {
+  display: block;
+  font-size: 20px;
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 24px;
+  letter-spacing: 0.4px;
+  color: var(--text-color);
+  text-decoration: none;
+  margin-bottom: 48px;
+}
+.nav-list {
+  display: flex;
+  justify-content: space-between;
+}
 /* кнопка */
 
 .first-sec {
