--- a/css/styles.css
+++ b/css/styles.css
@@ -56,7 +56,6 @@ img {
   display: flex;
   max-width: 428px;
   margin: 0 auto;
-  position: relative;
 }
 .heads {
   width: 427px;
@@ -104,7 +103,7 @@ img {
   letter-spacing: 0.02em;
   color: var(--text-color);
   padding: 24px 0;
-  position: relative;
+
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .current {
@@ -147,9 +146,7 @@ img {
   overflow: hidden;
 }
 .menu-nav-mobile.is-hidden {
-  opacity: 0;
-  visibility: hidden;
-  pointer-events: none;
+  display: none;
 }
 .menu-nav-mobile {
   display: flex;
@@ -737,15 +734,16 @@ img {
   top: 0;
   left: 0;
   width: 100%;
+  max-width: 392px;
   height: 100%;
   background-color: rgba(46, 47, 66, 0.4);
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal {
-  padding: 72px 24px 24px 24px;
-  width: 408px;
-  height: 584px;
+  padding: 72px 24px 24px 16px;
+  width: 100%;
+  height: 100%;
   background-color: rgba(252, 252, 252, 1);
   position: absolute;
   top: 50%;
@@ -807,6 +805,7 @@ img {
 }
 .first-div {
   margin-bottom: 8px;
+  width: 100%;
 }
 .name-lb {
   display: block;
@@ -816,6 +815,9 @@ img {
   letter-spacing: 0.04em;
   margin-bottom: 4px;
   color: var(--modal-text--);
+}
+.contact-form {
+  width: 100%;
 }
 .user-div {
   position: relative;
