--- a/css/styles.css
+++ b/css/styles.css
@@ -58,6 +58,8 @@ img {
 @media screen and (min-width: 1158px) {
   .container {
     max-width: 1158px;
+    padding-left: 15px;
+    padding-right: 15px;
   }
 }
 /* шапка сайта */
@@ -94,7 +96,6 @@ img {
 @media screen and (min-width: 1158px) {
   .heads {
     width: 1158px;
-    justify-content: space-around;
   }
 }
 .navigat {
@@ -141,6 +142,7 @@ img {
   color: var(--text-color);
   padding: 24px 0;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  position: relative;
 }
 @media screen and (max-width: 767px) {
   .list-it {
@@ -160,6 +162,9 @@ img {
   background-color: #404bbf;
   border-radius: 2px;
 }
+.addss {
+  font-style: normal;
+}
 @media screen and (max-width: 767px) {
   .addss {
     display: none;
@@ -170,6 +175,7 @@ img {
     display: flex;
     flex-wrap: wrap;
     justify-content: flex-end;
+    font-size: 12px;
   }
 }
 @media screen and (min-width: 1158px) {
@@ -227,6 +233,7 @@ img {
   display: block;
   margin-left: auto;
   margin-bottom: 32px;
+  border-radius: 50%;
 }
 
 .mobile-nav-li:not(:last-child) {
@@ -262,6 +269,11 @@ img {
   text-decoration: none;
   color: var(--t-color--);
   margin-bottom: 40px;
+}
+@media screen and (max-width: 320px) {
+  .address-li {
+    font-size: 20px;
+  }
 }
 .address-meil-li {
   display: block;
@@ -354,7 +366,7 @@ img {
         rgba(46, 47, 66, 0.7)
       ),
       url(../images/people-office-desc@1x.jpg);
-    max-width: 1158px;
+    max-width: 1440px;
   }
   @media (min-device-pixel-ratio: 2) {
     .first-sec {
@@ -363,7 +375,10 @@ img {
           rgba(46, 47, 66, 0.7)
         ),
         url(../images/people-office-desc@2x.jpg);
-      max-width: 1158px;
+      max-width: 1440px;
+      padding-top: 188px;
+      padding-bottom: 188px;
+      margin-bottom: 120px;
     }
   }
 }
@@ -383,6 +398,11 @@ img {
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 72px;
+}
+@media screen and (min-width: 768px) {
+  .header-first {
+    font-size: 56px;
+  }
 }
 .button-first:hover,
 .button-first:focus {
@@ -474,7 +494,6 @@ img {
 @media screen and (min-width: 768px) {
   .header-third {
     text-align: start;
-    font-size: 20px;
   }
 }
 .third-h {
@@ -530,6 +549,7 @@ img {
 @media screen and (max-width: 767px) {
   .team-ul {
     gap: 72px;
+    justify-content: center;
   }
 }
 @media screen and (min-width: 768px) {
@@ -552,7 +572,7 @@ img {
 }
 @media screen and (max-width: 767px) {
   .four-list {
-    width: 100%;
+    width: 264px;
   }
 }
 @media screen and (min-width: 768px) {
@@ -618,6 +638,11 @@ img {
 }
 .new-cont {
   display: block;
+}
+@media screen and (min-width: 768px) {
+  .new-cont {
+    width: 584px;
+  }
 }
 .header-customer {
   margin-bottom: 72px;
@@ -699,7 +724,6 @@ img {
   display: flex;
   flex-wrap: wrap;
   /* align-items: baseline; */
-
   justify-content: center;
 }
 @media screen and (max-width: 767px) {
@@ -710,6 +734,8 @@ img {
 @media screen and (min-width: 768px) and (max-width: 1157px) {
   .foot {
     gap: 24px;
+    width: 584px;
+    justify-content: flex-start;
   }
 }
 @media screen and (min-width: 1158px) {
@@ -740,6 +766,11 @@ img {
   display: flex;
   justify-content: center;
 }
+@media screen and (min-width: 1158px) {
+  .webs {
+    justify-content: left;
+  }
+}
 .boot-p {
   color: var(--too-color--);
   font-weight: 400;
@@ -757,6 +788,11 @@ img {
   line-height: 1.5;
   letter-spacing: 0.02em;
   text-align: center;
+}
+@media screen and (min-width: 1158px) {
+  .sotial-header {
+    text-align: left;
+  }
 }
 .social-list-links:focus,
 .social-list-links:hover {
@@ -790,6 +826,7 @@ img {
     margin-top: 72px;
   }
 }
+
 @media screen and (min-width: 1158px) {
   .footer-form-div {
     margin-left: 80px;
@@ -822,9 +859,13 @@ img {
     justify-content: center;
   }
 }
-
+@media screen and (max-width: 767px) {
+  .mail-input-label {
+    width: 100%;
+  }
+}
 .email-foot-input {
-  width: 398px;
+  width: 100%;
   height: 40px;
   border: 1px solid #ffffff;
   background-color: transparent;
@@ -996,7 +1037,7 @@ img {
   transform: translate(-50%, -50%);
   width: 100%;
   max-width: 392px;
-  height: 100%;
+  /* height: 100%; */
   background-color: rgba(46, 47, 66, 0.4);
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -1004,7 +1045,7 @@ img {
 .modal {
   padding: 72px 24px 24px 16px;
   width: 100%;
-  height: 100%;
+
   background-color: rgba(252, 252, 252, 1);
   position: absolute;
   top: 50%;
