--- a/css/styles.css
+++ b/css/styles.css
@@ -222,7 +222,7 @@ img {
   overflow: auto;
   width: 100%;
   max-width: 428px;
-  height: 100%;
+  height: 796px;
   z-index: 15;
   position: fixed;
   top: 0;
