--- a/css/styles.css
+++ b/css/styles.css
@@ -300,7 +300,7 @@ img {
       rgba(46, 47, 66, 0.7),
       rgba(46, 47, 66, 0.7)
     ),
-    url(../images/people-office-mobile@1x.jpg);
+    url(../images/people-office.jpg);
   padding: 112px 0;
   max-width: 428px;
   background-size: cover;
@@ -308,18 +308,7 @@ img {
   background-position: center;
   margin: 0 auto;
 }
-@media (min-device-pixel-ratio: 2),
-  (min-resolution: 192dpi),
-  (min-resolution: 2dppx) {
-  .first-sec {
-    background-color: var(--t-color--);
-    background-image: linear-gradient(
-        rgba(46, 47, 66, 0.7),
-        rgba(46, 47, 66, 0.7)
-      ),
-      url(../images/people-office-mobile@2x.jpg);
-  }
-}
+
 @media screen and (max-width: 427px) {
   .first-sec {
     background-image: linear-gradient(
@@ -346,7 +335,7 @@ img {
         rgba(46, 47, 66, 0.7)
       ),
       url(../images/people-office-tab@1x.jpg);
-    max-width: 768px;
+    max-width: 767px;
   }
 
   @media (min-device-pixel-ratio: 2) {
@@ -356,7 +345,7 @@ img {
           rgba(46, 47, 66, 0.7)
         ),
         url(../images/people-office-tab@2x.jpg);
-      max-width: 768px;
+      max-width: 767px;
     }
   }
 }
