--- a/css/styles.css
+++ b/css/styles.css
@@ -317,7 +317,9 @@ img {
       ),
       url(../images/people-office-mobile@1x.jpg);
   }
-  @media (min-device-pixel-ratio: 2) {
+  @media (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
     .first-sec {
       background-image: linear-gradient(
           rgba(46, 47, 66, 0.7),
@@ -338,7 +340,9 @@ img {
     max-width: 767px;
   }
 
-  @media (min-device-pixel-ratio: 2) {
+  @media (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
     .first-sec {
       background-image: linear-gradient(
           rgba(46, 47, 66, 0.7),
@@ -358,7 +362,9 @@ img {
       url(../images/people-office-desc@1x.jpg);
     max-width: 1440px;
   }
-  @media (min-device-pixel-ratio: 2) {
+  @media (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
     .first-sec {
       background-image: linear-gradient(
           rgba(46, 47, 66, 0.7),
