--- a/css/styles.css
+++ b/css/styles.css
@@ -223,7 +223,6 @@ img {
   width: 100%;
   max-width: 428px;
   height: 100%;
-  max-height: 800px;
   z-index: 15;
   position: fixed;
   top: 0;
@@ -236,7 +235,9 @@ img {
   margin-bottom: 32px;
   border-radius: 50%;
 }
-
+.mob-li.curr {
+  color: var(--next-color--);
+}
 .mobile-nav-li:not(:last-child) {
   margin-bottom: 40px;
 }
@@ -302,7 +303,7 @@ img {
     ),
     url(../images/people-office.jpg);
   padding: 112px 0;
-  max-width: 428px;
+
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -337,7 +338,6 @@ img {
         rgba(46, 47, 66, 0.7)
       ),
       url(../images/people-office-tab@1x.jpg);
-    max-width: 767px;
   }
 
   @media (min-device-pixel-ratio: 2),
@@ -349,7 +349,6 @@ img {
           rgba(46, 47, 66, 0.7)
         ),
         url(../images/people-office-tab@2x.jpg);
-      max-width: 767px;
     }
   }
 }
@@ -372,9 +371,8 @@ img {
         ),
         url(../images/people-office-desc@2x.jpg);
       max-width: 1440px;
-      padding-top: 188px;
-      padding-bottom: 188px;
-      margin-bottom: 120px;
+      padding-top: 112px;
+      padding-bottom: 112px;
     }
   }
 }
@@ -384,7 +382,7 @@ img {
 }
 .header-first {
   padding: 0 auto;
-  max-width: 496px;
+  max-width: 320px;
   color: var(--backgr-color);
   font-size: 36px;
   font-weight: 700;
@@ -487,7 +485,7 @@ img {
   font-weight: 700;
   text-align: center;
 }
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 1158px) {
   .header-third {
     font-size: 20px;
     text-align: start;
@@ -730,7 +728,7 @@ img {
 }
 @media screen and (min-width: 768px) and (max-width: 1157px) {
   .foot {
-    gap: 24px;
+    gap: 72px 24px;
     width: 584px;
     justify-content: flex-start;
   }
@@ -741,7 +739,7 @@ img {
     align-items: flex-start;
   }
 }
-@media screen and (max-width: 1157px) {
+@media screen and (max-width: 767px) {
   .foot-first-div {
     margin-bottom: 72px;
   }
@@ -763,7 +761,7 @@ img {
   display: flex;
   justify-content: center;
 }
-@media screen and (min-width: 1158px) {
+@media screen and (min-width: 768px) {
   .webs {
     justify-content: left;
   }
@@ -786,7 +784,7 @@ img {
   letter-spacing: 0.02em;
   text-align: center;
 }
-@media screen and (min-width: 1158px) {
+@media screen and (min-width: 768px) {
   .sotial-header {
     text-align: left;
   }
@@ -807,6 +805,11 @@ img {
 }
 .worker-svg-bottom {
   gap: 16px;
+}
+@media screen and (max-width: 767px) {
+  .foot-first-div {
+    margin-bottom: 72px;
+  }
 }
 .list-svg {
   width: 40px;
